5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1590_2895.log
== TEST (2019-04-01 13:31:37) 
-- CODE:
var1 = int(input("numero de jogos: "))
var2 = float(input("valor dos jogos: "))
var3 = float(input("valor do frete: ")
total = (var1*var2) + var3
print(total)


-- ERROR:
File "XXXX", line 4
    total = (var1*var2) + var3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:31:58) 
-- CODE:
var1 = int(input("numero de jogos: "))
var2 = float(input("valor dos jogos: "))
var3 = float(input("valor do frete: "))
total = (var1*var2) + var3
print(total)


-- EXECUTION TIME:
0.226351
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
